# nft-indexer

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  Settings.toml  cron.sql  entrypoint.sh  env.template  sqlx-data.json
api/: .env  Cargo.toml  Settings.toml  openapi.yml
api/ansible/: build.yml  hosts  install.yml
api/src/: cfg.rs  lib.rs  main.rs  model.rs  token.rs
data-reader/: Cargo.toml
data-reader/src/: lib.rs  meta.rs  service.rs
indexer/: Cargo.toml  README.md  readme.md
indexer-api/: Cargo.toml
indexer-api/src/: lib.rs  server.rs
indexer-jobs/: Cargo.toml
indexer-jobs/src/: lib.rs
indexer-repo/: Cargo.toml  sqlx-data.json
indexer-repo/.sqlx/: query-10b0276dd2b01b11d05ba27c8bba4976864d0ad1e6813079c7468bfe29843921.json  query-14044f4dc2858bb70b9857f42b5ff9290e93358dab29b05d5c8cb77c8346a311.json  query-1a8faf43e1567afeb374cc2c1d077d508b2b6df8cc0c30e59255d70c3f9ed835.json  query-23dde169ba4c8c92dd329f563239e0d5cf62f4681814561c9b8da8da983e0800.json  query-3181b63aefc5454f2be1164880600cf564f906cf9ca43d220aecc81d49471f7b.json  query-3a1d58904ce016d5730a2c579b9ecf2322b0e61d3688d4514abc036695221292.json  query-3d7908795676eb7e2896022697ba0457668b2a0502905a5f66baed44da26f9ee.json  query-3da1a3c00024408bbdc7bac09b48570170d758818e789dca67541a0663088924.json  query-52b1d58d04ad88f604ad3ca173a796ff6d3087b137f1cf2379fe307692b0c6d7.json  query-5e51b09eb38779001303cf4a7bd8e19970f8741eef32844e802cbed56ba5cd6d.json  query-5f619b22c878e3bb0288ce9aa8ddae142b8d0d2e68580bbf4e3992d7bd8c6c07.json  query-63be96af3cfc70a8345946f256bbb1498458f25adaaaea89b7263cf928e56ca8.json  query-6541c04d83e3b45927d0472100e752550a10b667fddf4ff6e8cdbb92348daa11.json  query-727ae64851bbfa9c79ce7c939638a19483b8a2a3b2f8f50c5fc2b5135753ba18.json  query-861d9c3757649d8f7d18e08fcfb77d3bfd31f92639ba779d8f8d7fdcacdc9e03.json  query-87c7656e7a329b854c371af8ce70e93b3acdc7c3577159ea6bdcd800b20d809a.json  query-8a642dcdfc996e0f497d5f513de2c10b51dab1884214351ab467e9f09979e531.json  query-8b5cad7aecc93fc1f3c1f72160858398e26687861db3a482ab4c1881ad22da9c.json  query-979652eb2bce370ed55ca111b3cf3dad175daf3fa77efd106c79ae016d694e03.json  query-9e785ebcd70336f018a5c52a32816eb3c26a5dc439344d691ef9cdcef0584381.json  query-a76e7676bc83e0d7ce7a25db1772552bd60eb7376fd761ed748dc622046d2748.json  query-a87eb47dd01cbb0671c24c3ad9c0aa0e1e72bba2281372d0ff29870f4b8f91ab.json  query-a882440abab9dc417035fd58384e57291d634439c7ff3c16bce6bbb12f65e227.json  query-aebb95861aadb7974c8e245ecde24963f241ff4a4343f67077f9e730021d71d2.json  query-b029d270ff46159f0ef351c16ff5ef23bcca247cc4d5338f7310e198c5eb170d.json  query-b26379153f56804b980c102af4afc542ec8aeda91a7e11918c72a7690b4a67f5.json  query-b9942fe4032b78edb24dd783e45e637322c83dda7d95272b1809da24c6c07951.json  query-b99c5dbb7f75b0e5fc7ee3c1c1e410c7716ceba7ae10729c7d314ab47dddd193.json  query-bfe196c120fa5ca8becfb04cc34cb2764fb8b8acdf63a4d79243480e69ac1ad5.json  query-c3794cf135adbfe8b3d8ff7ece307250e4ef4eb6ba110a9fa216f6148eb96173.json  query-cef46bb5677b537b3e7e62bbafd3e071c5e3a60a4a8c02b591a1f7599a632aa0.json  query-d1f7a3bffb14e4753aa27f201d388962bc987f866dfc0b895df4e5243c70a900.json  query-d3296a1ab523134ef89964e8c7f17111e885c83145a88acd61050cd928ccea76.json  query-d34ae4d3dc423724a3ffd48b5d1e1ac9268aeb9c8f825bf305a0b3e4c45c915b.json  query-dc3ca205b7f16671b31cbce748583c2e440670bbb590aa24a3ee0db0c8f3b7af.json  query-df26d3c8e860957cafb5fb637bcad68056c8d7529d7f1c15cea58621a096bad9.json  query-e7ab6800f3f0a8306c63bd3fea837c0a5f59c0efe571190ea5657f15ef2d7497.json  query-efbe3d086177df5c413b66a7e63e5fcde6a1e46221ca11ac78488525453212a6.json  query-f18939178a949574e501cfa6ad7cd04b68a1703e142913be60aedee2e6f58e3b.json  query-f5d588a0d28c4e9446b5ca4d7ea99ec0ad88afb1d7f48e71be86457eb9f9329a.json  (+2 more)
indexer-repo/migrations/: 20221005153006_nft_last.sql  20221010085134_nft_details.sql  20221024124707_usd_prices.sql  20221110171538_price_history.sql  20230201192838_update_collection_details.sql  20230201192916_add_indexes.sql  20230207192225_change_collection_detail.sql  20230209150254_add_nft_events_indexes.sql  20230210142828_add_indexes.sql  20230210184725_nft_detail.sql  20230213122929_add_support_whitelist.sql  20230315150544_nft_details_nft_id.sql  20230405202108_add_fee_to_views.sql  20230406115014_change_fee_views.sql  20230418120958_users.sql  20230707154629_update_enums.sql  20230707175008_update_json_fields_access.sql  20230714132929_add_handled_nft_table.sql  20230721151914_add_token_dex_pair_table.sql  20230731150959_update_handled_nft_table.sql  20230814183902_drop_not_null_for_collection_owner.sql  20230820132325_update_views.sql  20230828142226_refactor_tables.sql  20230830114555_additional_data.sql  20230906112458_add_nft_collection_custom.sql  20230906112458_add_nft_collection_v2.sql  20230910071009_denormalize_tables.sql  20230912130351_change_nft_collection_details.sql  20230912161520_fix_events_perfomance.sql  20230913064606_add_nft_index.sql  20230913071844_create_get_events.sql  20230913131032_add_nft_collection_custom.sql  20230913171053_add_verified_get_events.sql  20230914075806_change_nft_events_trigger.sql  20230914093158_change_nft_collection_details.sql  20230914100252_optimize_owners_count.sql  20230914182638_drop_views.sql  20230918122750_costum_collection_fix.sql  20230918134350_add_social_to_collection_detail.sql  20230918145934_add_cron_for_collection_details.sql  (+63 more)
indexer-repo/src/: actions.rs  cached.rs  collection.rs  jobs.rs  lib.rs  meta.rs  price.rs  types.rs  utils.rs
indexer/scripts/: update.sh
indexer/src/: config.rs  lib.rs  main.rs  network_scanner.rs  nft_cache.rs  parser.rs  server.rs  utils.rs
model/: Cargo.toml  Settings.toml  Settings.toml.example  log.txt
model/abi/: AuctionRootTip3.abi.json  Collection.abi.json  DirectSell.abi.json  FactoryDirectSell.abi.json  Nft.abi.json
model/migrations/: tables.sql
model/src/: lib.rs  main.rs  server.rs  subscriber.rs  utils.rs
rpc/: Cargo.toml
rpc/src/: lib.rs  retrier.rs
storage/: .env  Cargo.toml  sqlx-data.json
storage/migrations/: 20220825130631_nft.sql  (+21 more)
(+162 files in other folders)
