[package]
name = "nft-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.44"
bigdecimal = { version = "0.2.2", features = ["serde"] }
config = { version = "0.11.0" }
env_logger = "0.9.0"
futures = "0.3"
log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.10", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
transaction-consumer = { git = "https://github.com/broxus/transaction-consumer.git" }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
