[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
storage = { path = '../storage' }
pretty_env_logger = "0.4"
tokio = { version = "1.20", features = [ "macros", "rt" ] } 
warp = "0.3"
serde = "1.0"
config = "0.13"
log = "0.4.17"
anyhow = "1.0.58"
serde_json = "1.0"
thiserror = "1.0.31"
