[package]
name = "data_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.indexer_repo]
path = "../indexer-repo"

[dependencies]
anyhow = "^1.0.44"
log = { version = "0.4", features = ["std", "serde"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "offline"] }
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
transaction-consumer = { git = "https://github.com/broxus/transaction-consumer" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
reqwest = { version="0.11.18", features = ["json"] }
bigdecimal = { version="0.3.0", features=["serde"] }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
nekoton-contracts = { git = "https://github.com/broxus/nekoton.git" }
nekoton-utils =  { git = "https://github.com/broxus/nekoton.git" }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
