[package]
name = "indexer-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.data-reader]
path = "../data-reader"

[dependencies.indexer-repo]
path = "../indexer-repo"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
anyhow = "^1.0.44"
log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opg = "0.2.1"
serde_yaml = "0.9.25"
