[package]
name = "indexer-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.data-reader]
path = "../data-reader"

[dependencies.indexer-repo]
path = "../indexer-repo"

[dependencies]
anyhow = "^1.0.44"
axum = "0.8.4"
log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.25"
tokio = { version = "1.45.1", features = ["net"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
