[package]
name = "indexer-jobs"
version = "0.1.0"
edition = "2021"

[dependencies.indexer-repo]
path = '../indexer-repo'

# Add the required dependencies
[dependencies]
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.10.2"
log = "0.4.21"
