[package]
name = "indexer-repo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.44"
log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "bigdecimal",
    "json",
    "chrono",
    "offline"
] }
chrono = "0.4"
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
