[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies.meta_reader]
path = "../meta-reader"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
anyhow = "^1.0.44"
async-trait = "0.1.57"
bigdecimal = { version = "0.3", features = ["serde"] }
chrono = "0.4"
config = { version = "0.13.2" }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3"
once_cell = "1.16.0"
log = { version = "0.4", features = ["std", "serde"] }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
nekoton-contracts = { git = "https://github.com/broxus/nekoton.git" }
nekoton-utils =  { git = "https://github.com/broxus/nekoton.git" }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rpc = { path = "../rpc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexer_repo = { path = "../indexer-repo" }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "offline"] }
stackdriver_logger = { version = "*", default-features = false, features = ["prod"] }
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
transaction-buffer = { git = "https://github.com/broxus/transaction-buffer.git" }
transaction-consumer = { git = "https://github.com/broxus/transaction-consumer" }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
url = { version = "2", features = ["serde"] }
