[package]
name = "nft-indexer"
version = "0.1.0"
edition = "2021"

[dependencies.data-reader]
path = "../data-reader"

[dependencies.indexer-api]
path = "../indexer-api"

[dependencies.indexer-repo]
path = "../indexer-repo"

[dependencies.indexer-jobs]
path = "../indexer-jobs"

[dependencies]
anyhow = "^1.0.44"
async-trait = "0.1.57"
bigdecimal = { version = "0.4.8", features = ["serde"] }
chrono = "0.4"
config = { version = "0.13.2" }
dotenv = "0.15.0"
futures = "0.3"
once_cell = "1.16.0"
log = { version = "0.4", features = ["std", "serde"] }
nekoton-abi = { git = "https://github.com/broxus/nekoton" }
# num = "0.4"
# num-derive = "0.3"
# num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
stackdriver_logger = { version = "*", default-features = false, features = [
    "prod",
] }
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
everscale-rpc-client = { git = "https://github.com/broxus/everscale-jrpc" }
transaction-buffer = { git = "https://github.com/broxus/transaction-buffer" }
transaction-consumer = { git = "https://github.com/broxus/transaction-consumer" }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }
url = { version = "2", features = ["serde"] }
cpu-time = "1.0.0"
reqwest = "0.11.27"
num-derive = "0.4.2"
num-traits = "0.2.19"
