[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
log = "0.4"
axum-jrpc = "0.2"
env_logger = "0.9"
tokio = { version = "1.20" }
parking_lot = "0.12"
storage = { path = "../storage" }
thiserror = "1.0"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = ">=0.11.10", features = ["gzip", "json"] }
url = "2.2"
rand = "0.8"
futures = "0.3"
bigdecimal = { version = "0.2.2", features = ["serde"] }
num-traits = "0.2"
async-trait = "0.1"
rustc-hash = "1.1.0"
lazy_static = "1.4"
ton-indexer = { git = "https://github.com/broxus/ton-indexer.git", features = ["count-cells"] }
nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git", default-features = false }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }
indexer-lib = { git = "https://github.com/broxus/legacy-node-indexer" }

ton-block-compressor = { git = "https://github.com/broxus/ton-block-compressor" }
