[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.44"
log = { version = "0.4", features = ["std", "serde"] }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
nekoton-contracts = { git = "https://github.com/broxus/nekoton.git" }
nekoton-utils =  { git = "https://github.com/broxus/nekoton.git" }
serde_json = "1.0"
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
transaction-consumer = { git = "https://github.com/broxus/transaction-consumer.git" }
