[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.44"
log = { version = "0.4", features = ["std", "serde"] }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
nekoton-contracts = { git = "https://github.com/broxus/nekoton.git" }
nekoton-utils =  { git = "https://github.com/broxus/nekoton.git" }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["bigdecimal", "runtime-tokio-native-tls"] }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
transaction-consumer = { git = "https://github.com/broxus/transaction-consumer.git", rev = "f3806978e266323611a27e7a0280fb01eb035bb5" }
