[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
log = "0.4"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "offline" ] }
thiserror = "1.0"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"

