[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.44"
async-trait = "0.1"
bigdecimal = { version = "0.2.2", features = ["serde"] }
log = { version = "0.4", features = ["std", "serde"] }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
opg = { version = "0.1", features = ["uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.10", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "offline",
    "bigdecimal",
    "json",
    "chrono"
] }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
