[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.44"
async-trait = "0.1"
log = { version = "0.4", features = ["std", "serde"] }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
opg = { version = "0.1", features = ["uuid"] }
reqwest = { version = "0.11", features = ["json"] }
rpc = { path = "../rpc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "bigdecimal",
    "json",
    "chrono",
    "offline"
] }
chrono = "0.4"
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
transaction-consumer = { git = "https://github.com/broxus/transaction-consumer.git" }
